--- a/src/styles/ProjectCard.css
+++ b/src/styles/ProjectCard.css
@@ -36,7 +36,6 @@
 .github {
     text-align: center;
     text-decoration: none;
-    color: white;
     font-size: calc(15px + 2vmin);
 }
 
